# simplex

./: LICENSE  simplex.cabal
src/Numeric/LinearProgramming/: Easy.hs
